Stop bullets from beforming when the title wraps

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -220,6 +220,7 @@ $spv-list-item--inner: 0.25 * $spv-outer--small-scaleable; // padding top and bo
   h#{$i}.p-stepped-list__title {
     // sass-lint:enable no-qualifying-elements
     &::before {
+      flex-shrink: 0;
       margin-right: $sph-inner;
 
       @media (max-width: $breakpoint-heading-threshold) {
